test/langtools/tools/javac/SuperInit/EarlyInnerAccessErrorMessageTest.out
EarlyInnerAccessErrorMessageTest.java:12:34: compiler.err.cant.ref.before.ctor.called: x
- compiler.note.preview.filename: EarlyInnerAccessErrorMessageTest.java, DEFAULT
- compiler.note.preview.recompile
1 error
